Fix `prepareItemNameWhitespace` not working with the actual font size

--- a/style/index.css
+++ b/style/index.css
@@ -31,6 +31,9 @@ canvas {
   user-select: none;
   pointer-events: auto;
 }
+html {
+  font-size: 15px;
+}
 body {
   margin: 0;
   width: 100vw;
@@ -38,7 +41,6 @@ body {
   display: flex;
   background-color: #008080;
   overflow: hidden;
-  font-size: 15px;
   font-family: 'Unifont';
   cursor: url('../resource/image/cursor/default.png'), auto;
 }
