--- a/style/less/main.less
+++ b/style/less/main.less
@@ -25,6 +25,10 @@ canvas {
   pointer-events: auto;
 }
 
+html {
+  font-size: 15px;
+}
+
 body {
   margin: 0;
   width: 100vw;
@@ -32,7 +36,6 @@ body {
   display: flex;
   background-color: #008080;
   overflow: hidden;
-  font-size: 15px;
   font-family: 'Unifont';
   cursor: url('../resource/image/cursor/default.png'), auto;
 }
